--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,7 @@
+body {
+  background-color: #1A1D23;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
